# Nettens

./: Nettens.sln
BitCode/: BitCode.csproj  BitCodeReader.cs  BitReader.cs
Cli/: Cli.csproj  Program.cs
Compiler/: Compiler.cs  Compiler.csproj
Ir2Sane/: CMakeLists.txt  main.cpp
LlvmParser/: IrTypes.cs  LlvmParser.csproj  Loader.cs
PrettyPrinter/: Extensions.cs  PrettyPrinter.csproj
TestApp/: Module.cs  Program.cs  TestApp.csproj
tests/: Makefile  add.O0.bc  add.O1.bc  add.O1.mfir  add.O1.s  add.bc  add.mfir  add.s  if.O1.bc  if.O1.mfir  if.O1.s  if.bc  if.c  if.ll  if.mfir  if.s  if_phi.O0.bc  if_phi.O0.mfir  if_phi.O0.s  if_phi.O1.bc  if_phi.O1.mfir  if_phi.O1.s  if_phi.c  multifunction.O0.bc  multifunction.O0.s  multifunction.O1.bc  multifunction.O1.mfir  multifunction.O1.s  multifunction.bc  multifunction.c  multifunction.mfir  multifunction.s  pointers.O0.bc  pointers.O0.mfir  pointers.O0.s  pointers.O1.bc  pointers.O1.mfir  pointers.O1.s  pointers.bc  pointers.c  (+9 more)
